Tuesday, September 27th, 2016:
- Restarted, code

Monday July 11th:
- Fixed some Git issues
- Move ChangeLog from local to Git
- Updated Readme.md

Tuesday June 7th:
- Fixed Analog channel struct
- Fixed Joystick channel naming
- Updated Motor channel struct
- Removed some debug code

Sunday June 5th:
- Updated Joystick status
- Added Motor speed variable

Friday June 3rd:
- Added Debug switch and LED
- Added Structs for Digital and Analog channels
- Added and Removed debug code

Friday May 27th:
- Cleaned up the source code ( fixed const structs for variables with constant integers )
    |-> Updated Joystick and Robot status variables
- Connecting with robot works on the first try!
    |-> Added X-Drive
- Added Structs for Motor and Joystick Channels

Undocumented History:
- Switched from EasyC to PROS
- Moved source files from local to GitHub
- Added GitIgnore for Eclipse project files
- Added to Readme.md:
    |-> Resources for PROS
    |-> To-Do List
    |-> Sources
- Added VEX Robotics team name
- Added Basic Joystick and Robot status variables